# macroquad_stuff

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
convay/src/: main.rs
games/convay/: Cargo.toml
games/convay/shapes/: glider_gun.txt
games/convay/src/: main.rs
games/pong/src/: main.rs
pong/: Cargo.toml
pong/src/: main.rs
public/: game.html.template  generate.sh
site/: functions.js  game.html.template  generate.sh  index.html.template  style.css
src/: context.rs  context_wasm.rs  lib.rs
