[package]
name = "macroquad_stuff"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "games/convay",
    "games/pong"
]
resolver = "2"

[workspace.dependencies]
macroquad = "0.4.14"
macroquad_stuff = { path = "." }

[dependencies]
macroquad.workspace = true
rfd = "0.15.3"
sapp-jsutils = "0.1.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1.7"

